переводит на англ еденици времени

--- a/src/templates/timer-markup.hbs
+++ b/src/templates/timer-markup.hbs
@@ -1,21 +1,21 @@
 <div class="timer" id={{id}}>
     <div class="field">
         <span class="value" data-value="days"></span>
-        <span class="label">Дней</span>
+        <span class="label">days</span>
     </div>
 
     <div class="field">
         <span class="value" data-value="hours"></span>
-        <span class="label">Часов</span>
+        <span class="label">hours</span>
     </div>
 
     <div class="field">
         <span class="value" data-value="mins"></span>
-        <span class="label">Минут</span>
+        <span class="label">mins</span>
     </div>
 
     <div class="field">
         <span class="value" data-value="secs"></span>
-        <span class="label">Секунд</span>
+        <span class="label">secs</span>
     </div>
 </div>
